tests/specs/check/check_workspace/check_discover.out
Check [WILDCARD]main.ts
Check [WILDCARD]mod.ts
TS2304 [ERROR]: Cannot find name 'postMessage'.
postMessage;
~~~~~~~~~~~
    at file:///[WILDLINE]/main.ts:11:1

TS2304 [ERROR]: Cannot find name 'postMessage'.
postMessage;
~~~~~~~~~~~
    at file:///[WILDLINE]/member/mod.ts:8:1

Found 2 errors.

TS2304 [ERROR]: Cannot find name 'localStorage'.
localStorage;
~~~~~~~~~~~~
    at file:///[WILDLINE]/member/mod.ts:2:1

error: Type checking failed.
